# sr2_dashboard

./: .gitignore  CMakeLists.txt  FEATURES  README  TODO  package.xml  plugin.xml  setup.py
launch/: sr2_dashboard.launch  sr2_dashboard_bottle_opener.launch  sr2_dashboard_kuka.launch  sr2_dashboard_new.launch  sr2_dashboard_robotrainer_editor.launch  sr2_dashboard_test.launch  sr2_dashboard_testing.launch
notes/: design.odg  design2.odg
resources/config/: bottle_opener.yaml  config1.yaml  configDenis.yaml  configDenis.yaml~  config_demo.yaml  config_new_format.yaml  config_robotrainer_editor.yaml  config_test.yaml  config_testing.yaml  kuka.yaml  neue_yaml.yaml  robot_with_bottle_opener_via_universal_dashboard.launch
scripts/: get_exit_code.sh  sr2_dashboard.py  sr2_dashboard~
src/: .sr2_emergency_state.py.swp  sr2_dashboard.py  sr2_dashboard_widget_BASIC_show_big_widget.py  sr2_status_bar_widget.py
src/sr2_dashboard/: sr2_battery_widget.py  sr2_battery_widget.py~  sr2_dashboard.py  sr2_dashboard_EMPTY.py  sr2_dashboard_EMPTY.py~  sr2_dashboard_OLD.py  sr2_dashboard_load_config.py  sr2_dashboard_widget_BASIC.py  sr2_dashboard_widget_BASIC_show_big_widget.py  sr2_dashboard_yaml_loader.py  sr2_display_main_view.py  sr2_emergency_stop_widget.py~  sr2_status_bar_widget.py  sr2_status_bar_widget.py~  sr2dashboard.config~  sr_battery.py~  util.py  yaml_gui.py
src/sr2_dashboard/misc/: sr2_extract_pkg_cmd.py~  sr2_grid_generator.py  sr2_grid_generator.py~  sr2_monitor_object.py  sr2_ros_entry_extraction.py  sr2_ros_entry_extraction.py~  sr2_runnable_object.py
(+7 files in other folders)
